<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register_form"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />


    <EditText
        android:id="@+id/name"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/check_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/teacher"
        android:textSize="22sp" />

    <CheckBox
        android:id="@+id/check_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:text="@string/student"
        android:textSize="22sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textSize="20sp" />

</LinearLayout>